--- a/Proyecto Final RD/Proyecto Final RD/Proyecto Final RD.csproj
+++ b/Proyecto Final RD/Proyecto Final RD/Proyecto Final RD.csproj
@@ -53,9 +53,14 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Garaje.cs" />
     <Compile Include="Gastos.cs" />
+    <Compile Include="Local.cs" />
+    <Compile Include="Pagos.cs" />
+    <Compile Include="Pisos.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Propiedades.cs" />
     <Compile Include="Propietarios.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
